edit form and upload code login

--- a/src/app/features/layouts/additions/employee-form/employee-form.component.html
+++ b/src/app/features/layouts/additions/employee-form/employee-form.component.html
@@ -90,7 +90,7 @@
           <div class="input-icon-wrapper">
             <i class="bi bi-credit-card input-icon"></i>
             <input
-              type="text"
+              type="number"
               id="idNumber"
               formControlName="idNumber"
               placeholder="Enter ID Number (14 digits)"
@@ -267,7 +267,7 @@
           <!-- Clear form button -->
           <button
             type="button"
-            class="buttons-form more-dark-gray-color btn-clear"
+            class="buttons-form text-black btn-clear"
             (click)="onClear()"
           >
             Clear
